YA-19/Feat(api): 서비스 API 서버 스캐폴드 추가
